<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.FacultyProfileFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/facultyNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_50sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/faculty"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/faculty_classLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/class_name"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/facultyNameLayout"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_50sdp"
        >
        <AutoCompleteTextView
            android:id="@+id/classname_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_user"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/faculty_classLayout"
        android:layout_centerHorizontal="true"
       android:layout_margin="@dimen/_20sdp"
        android:text="@string/save"
        app:cornerRadius="@dimen/_15sdp" />

</RelativeLayout>